# MemGPT

./: pyproject.toml
.github/workflows/: tests.yml
memgpt/: agent.py  config.py  constants.py  credentials.py  data_types.py  embeddings.py  interface.py  llm_api_tools.py  main.py  memory.py  metadata.py  persistence_manager.py  system.py  test.py  utils.py
memgpt/agent_store/: chroma.py  db.py  message_store.py  storage.py
memgpt/autogen/: memgpt_agent.py
memgpt/cli/: cli.py  cli_config.py  cli_load.py
memgpt/client/: client.py
memgpt/functions/: functions.py  schema_generator.py
memgpt/functions/function_sets/: base.py
memgpt/models/: chat_completion_response.py
memgpt/presets/: utils.py
memgpt/presets/examples/: memgpt_chat.yaml
memgpt/server/: server.py
memgpt/server/rest_api/: interface.py
memgpt/server/rest_api/agents/: config.py
tests/: config.py  test_agent_function_update.py  test_base_functions.py  test_client.py  test_different_embedding_size.py  test_load_archival.py  test_metadata_store.py  test_migrate.py  test_server.py  test_storage.py  test_summarize.py  test_websocket_interface.py  utils.py
