[tool.poetry]

name = "pymemgpt"
version = "0.3.5"
packages = [
    {include = "memgpt"}
]
description = "Teaching LLMs memory management for unbounded context"
authors = [
    "MemGPT Team <hi@memgpt.ai>",
]
license = "Apache License"
readme = "README.md"

[tool.poetry.scripts]
memgpt = "memgpt.main:app"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
pytz = "^2023.3.post1"
setuptools = "^68.2.2"
pgvector = "^0.2.3"
pg8000 = "^1.30.3"
docstring-parser = "^0.15"
httpx = "^0.25.2"
numpy = "^1.26.2"
demjson3 = "^3.0.6"
pyyaml = "^6.0.1"
sqlalchemy-json = "^0.7.0"
fastapi = {version = "^0.104.1"}
pydantic = "^2.5.2"
sqlalchemy = "^2.0.25"
python-box = "^7.1.1"
sqlmodel = "^0.0.16"
llama-index = "^0.10.6"
llama-index-embeddings-openai = "^0.1.1"
python-redis-cache = "^4.0.0"
toolz = "^0.12.1"

[tool.poetry.group.dev.dependencies]
fawltydeps = "^0.15.0"
vulture = "^2.11"
autoflake = "^2.3.0"
black = {extras = ["jupyter"], version = "^24.2.0"}
pyright = "^1.1.347"


[tool.black]
line-length = 140
target-version = ['py310', 'py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
